# qt_ecg

./: .gitignore  CMakeLists.txt  README.md
src/: alarmmanager.cpp  alarmmanager.h  cloudsyncer.cpp  cloudsyncer.h  datamanager.cpp  datamanager.h  ecgchartwidget.cpp  ecgchartwidget.h  historydialog.cpp  historydialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mqttclient.cpp  mqttclient.h  rpeakdetector.cpp  rpeakdetector.h  settingsdialog.cpp  settingsdialog.h  vitaldata.h  vitalschartwidget.cpp  vitalschartwidget.h
